backend/api_server.log
Traceback (most recent call last):
  File "/Users/yeya/FlutterProjects/ai-time/backend/api_server_with_docs.py", line 422, in <module>
    from api.v1.endpoints.user import user_relations
  File "/Users/yeya/FlutterProjects/ai-time/backend/api/v1/endpoints/user/user_relations.py", line 15, in <module>
    from services.user.user_relation_service import UserRelationService
  File "/Users/yeya/FlutterProjects/ai-time/backend/services/user/user_relation_service.py", line 216
    return UserInfo(
    ^^^^^^
IndentationError: expected an indented block after 'if' statement on line 215
INFO:     Started server process [50919]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)

============================================================
ğŸš€ æ­£åœ¨å¯åŠ¨ AI Time Management API Server
============================================================
âœ… AIèŠå¤©æ¨¡å—åŠ è½½æˆåŠŸ
âœ… AIæ¨èæ¨¡å—åŠ è½½æˆåŠŸ
âœ… æˆåŠŸæ¡ˆä¾‹æ¨¡å—åŠ è½½æˆåŠŸ
âœ… æ¶ˆæ¯æ¨¡å—åŠ è½½æˆåŠŸ
âœ… å­¦ä¹ æ–¹æ³•æ¨¡å—åŠ è½½æˆåŠŸ
âœ… å¾½ç« æ¨¡å—åŠ è½½æˆåŠŸ
âœ… åŠ¨æ€æ¨¡å—åŠ è½½æˆåŠŸ
âœ… åŠ¨æ€æ¨¡å—åŠ è½½æˆåŠŸ
âœ… å¯¼å¸ˆæ¨¡å—åŠ è½½æˆåŠŸ
âœ… æ—¶é—´è¡¨æ¨¡å—åŠ è½½æˆåŠŸ
âœ… ç»Ÿè®¡æ¨¡å—åŠ è½½æˆåŠŸ
âœ… ä»»åŠ¡æ¨¡å—åŠ è½½æˆåŠŸ
âœ… ç”¨æˆ·èµ„äº§æ¨¡å—åŠ è½½æˆåŠŸ
âœ… ç”¨æˆ·æ¶ˆæ¯è®¾ç½®æ¨¡å—åŠ è½½æˆåŠŸ
âœ… ç”¨æˆ·ä¸ªäººä¿¡æ¯æ¨¡å—åŠ è½½æˆåŠŸ
âš ï¸  ç”¨æˆ·å…³ç³»æ¨¡å—åŠ è½½å¤±è´¥: expected an indented block after 'if' statement on line 215 (user_relation_service.py, line 216)
============================================================
ğŸ“š APIæ–‡æ¡£åœ°å€:
   - Swagger UI: http://localhost:8000/docs
   - ReDoc:      http://localhost:8000/redoc
   - OpenAPI:    http://localhost:8000/openapi.json
============================================================

INFO:     127.0.0.1:55859 - "OPTIONS /api/v1/users/me/relations/tutors?user_id=101&limit=3 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55860 - "OPTIONS /api/v1/users/me/relations/fans?user_id=101&limit=4 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55862 - "OPTIONS /api/v1/tasks?user_id=1 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55863 - "OPTIONS /api/v1/schedule/time-slots?user_id=1 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55859 - "GET /api/v1/users/me/relations/tutors?user_id=101&limit=3 HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:55864 - "OPTIONS /api/v1/tasks?user_id=1 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55865 - "OPTIONS /api/v1/schedule/time-slots?user_id=1 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55860 - "GET /api/v1/users/me/relations/fans?user_id=101&limit=4 HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:55862 - "GET /api/v1/tasks?user_id=1 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55859 - "GET /api/v1/tasks?user_id=1 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55863 - "GET /api/v1/schedule/time-slots?user_id=1 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55864 - "GET /api/v1/schedule/time-slots?user_id=1 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55865 - "GET /api/v1/messages?message_type=0&page=1&page_size=20&user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55860 - "GET /api/v1/messages/unread-stats?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55862 - "GET /api/v1/messages?message_type=0&page=1&page_size=20&user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55859 - "GET /api/v1/messages?message_type=0&page=1&page_size=20&user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55863 - "GET /api/v1/messages/unread-stats?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55864 - "GET /api/v1/messages?message_type=0&page=1&page_size=20&user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55865 - "GET /api/v1/messages?message_type=1&page=1&page_size=20&user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55860 - "GET /api/v1/messages?message_type=2&page=1&page_size=20&user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55892 - "GET /api/v1/messages/unread-stats?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55862 - "OPTIONS /api/v1/users/me/profile?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55859 - "OPTIONS /api/v1/users/me/assets?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55863 - "OPTIONS /api/v1/users/me/relations/stats?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55864 - "GET /api/v1/users/me/relations/tutors?user_id=101&limit=3 HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:55865 - "GET /api/v1/users/me/relations/fans?user_id=101&limit=4 HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:55860 - "OPTIONS /api/v1/users/me/profile?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55862 - "OPTIONS /api/v1/users/me/assets?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55859 - "OPTIONS /api/v1/users/me/relations/stats?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55863 - "GET /api/v1/users/me/relations/tutors?user_id=101&limit=3 HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:55864 - "GET /api/v1/users/me/relations/fans?user_id=101&limit=4 HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:55862 - "GET /api/v1/users/me/relations/stats?user_id=101 HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:55864 - "GET /api/v1/users/me/relations/stats?user_id=101 HTTP/1.1" 404 Not Found
INFO:     127.0.0.1:55865 - "GET /api/v1/users/me/profile?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55860 - "GET /api/v1/users/me/assets?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55859 - "GET /api/v1/users/me/profile?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55863 - "GET /api/v1/users/me/assets?user_id=101 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55862 - "OPTIONS /api/v1/moments?user_id=1&moment_type=dynamic&page=1&page_size=20 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55864 - "OPTIONS /api/v1/moments?user_id=1&moment_type=dynamic&page=1&page_size=20 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55865 - "OPTIONS /api/v1/moments?user_id=1&moment_type=dynamic&page=1&page_size=20 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55860 - "OPTIONS /api/v1/moments?user_id=1&moment_type=dynamic&page=1&page_size=20 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55859 - "GET /api/v1/moments?user_id=1&moment_type=dynamic&page=1&page_size=20 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55862 - "GET /api/v1/moments?user_id=1&moment_type=dynamic&page=1&page_size=20 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55863 - "GET /api/v1/moments?user_id=1&moment_type=dynamic&page=1&page_size=20 HTTP/1.1" 200 OK
INFO:     127.0.0.1:55864 - "GET /api/v1/moments?user_id=1&moment_type=dynamic&page=1&page_size=20 HTTP/1.1" 200 OK
